--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,27 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400");
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap/scss/bootstrap";
 @import 'src/_var.scss';
 
-
-// @ Button Disabeln Erstellen wenn nicht alle werte ausgefüllt sind 
-// @ Wenn der Timer agbelaufen ist, was anzeigen und einen Ton gegben oder z.b. Logo blinken lassen
-// @ Von beginn an, edit Modus ausblenden
-
-
 .bg-img {
-    height: 100vh;
+    height: 106vh;
     width: 100vw;
     z-index: -1;
     position: absolute;
     object-fit: cover;
+    filter: brightness(0.35);
+
 }
 
 .img-main {
-    width: 50%;
+    width: 100%;
     height: auto;
-    margin-top: 50px;
-    max-width: 800px;
-    max-height: 800px;
+    margin-top: 20px;
+    max-width: 350px;
+    max-height: 350px;
 }
 
 .content {
@@ -31,7 +27,7 @@
     max-width: 120rem;
     margin: 0 auto;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 180px;
 
 
     h1 {
@@ -39,6 +35,7 @@
         font-weight: 500;
         color: $gold;
         line-height: 5rem;
+        margin-top: -35px;
     }
 
     h4 {
@@ -64,7 +61,7 @@
     }
 
     .position-timer {
-        margin-top: 100px;
+        margin-top: 75px;
     }
 
     .text-red {
@@ -124,6 +121,7 @@
     color: $gold;
     font-size: 1rem;
     background-color: black;
+    z-index: 10;
 
     label {
         font-weight: 600;
@@ -161,8 +159,8 @@
         margin-top: -50px !important;
     }
 
-    img {
-        width: 25% !important;
+    .img-main {
+        width: 50% !important;
     }
 
     .position-timer {
