--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,8 +46,6 @@
 
 
   <div class="content fluid">
-    <!-- <h1 class="mb-2" [innerHTML]="htmltitel"></h1> -->
-
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
@@ -82,10 +80,8 @@
       </span>
     </div>
 
+    <!-- ablauf -->
     <div class="position-ablauf" *ngIf="isexpired">
-
-      <!-- hier einfügen -->
-      <!-- Animate 3 -->
       <svg viewBox="0 0 960 300">
         <symbol id="s-text">
           <text text-anchor="middle" x="50%" y="80%">Lets go </text>
@@ -110,25 +106,3 @@
     edit
   </button>
 </div>
-
-
-<!-- Animate 1 -->
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-md-12 text-center">
-      <h3 class="animate-charcter"> Lets go</h3>
-    </div>
-  </div>
-</div> -->
-
-<!-- Animate 2 -->
-<!-- <div class="waviy">
-  <span style="--i:1">L</span>
-  <span style="--i:2">E</span>
-  <span style="--i:3">T</span>
-  <span style="--i:4">S</span>
-  <span style="--i:5">></span>
-  <span style="--i:6">G</span>
-  <span style="--i:7">O</span>
-
-</div> -->
